Version 0.9.0
Cosmetics/Features/Code
*changed all LinkedList to ArrayList in ChessRules
*implemented isInCheck method into ChessRules and ChessGame
*reduced number of "if(maximizing)" branches by combining them in AI  
*small optimizations in ChessRules and Board classes
*implemented options to control AI depth
*implemented endGame() method in GameController, Player Interface, AI 
and ChessGuiController 
	to clean up analyticsView of AI after game

Bugs:
*AI now uses appropriate Transpositions for each flag value (EXACT, 
ALPHA, BETA)
*AI now doesn't consider values coming from quiet search as EXACT

AI:
*implemented sorting method for regular search, removed restriction of search depth for sorting
*set move field in ChessTreeNode to final
*removed gameValue field in ChessTreeNode
*checkmate is now being caught in alpha beta pruning so bestMove entries are being isnerted into
	transposition table
*positions where the player is in check is not considered quiet 
anymore => all possible moves are 
considered
*changed signature of createChildrenfrompieceList method (takes now 
color instead of piece list)
*improved bishopbonus in evaluation function (check for pawns directly diagonal in front of bishop)
*extended KNIGHT_BONUS_MATRIX to avoid calculations for symmetry
*implemented position matrices for bishop, rook, king(middle and 
endgame), queen
*implemented gameStage flag and enum (opening, middlegame, endgame)
*improved usage of transposition tables: now alpha and beta cuts are 
also used to improve speed
*implemented transposition table support for quiet search
*implemented killer moves to improve sorting at same ply depth
*changed method to determine draw by repetition (check in recent 
positions if current position is present)
*AI now also sorts the quietList if it is in check with SortingMovesWithoutKiller